# uav_ws

./: .gitignore  MAIN_PC_SETUP.md  README.md
src/uav_camera_bringup/: package.xml  setup.cfg  setup.py
src/uav_camera_bringup/config/: camera.yaml  camera_info.yaml  qos.yaml
src/uav_camera_bringup/launch/: realsense_color.launch.py  realsense_depth.launch.py  rgbd_camera.launch.py  uav_camera_system.launch.py  usb_camera.launch.py  v4l2_rgbd_camera.launch.py
src/uav_camera_bringup/systemd/: uav-camera.service
src/uav_camera_status/: package.xml  setup.cfg  setup.py
src/uav_camera_status/uav_camera_status/: heartbeat_node.py  network_monitor_node.py  system_monitor_node.py
src/uav_camera_streamer/: package.xml  setup.cfg  setup.py
src/uav_camera_streamer/uav_camera_streamer/: TROUBLESHOOTING.md  camera_health_node.py  save_image_once.py  v4l2_depth_node.py  v4l2_mjpeg_node.py
