<?xml version="1.0"?>
<package format="3">
  <name>uav_camera_streamer</name>
  <version>0.1.0</version>
  <description>Helper nodes for UAV camera stream health monitoring.</description>
  <maintainer email="co-uv@example.com">Co-UV</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
